--- a/File-FindLines/module/README
+++ b/File-FindLines/module/README
@@ -1,16 +1,8 @@
 File-FindLines
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
-
+This is a module to filter a stream of records for those matching certain
+criteria (normally lines in files, similar to grep(1), but not restricted to
+it).
 
 INSTALLATION
 
