--- a/File-FindLines/module/Changes
+++ b/File-FindLines/module/Changes
@@ -1,4 +1,4 @@
-Revision history for File-FindLines
+Revision history for Stream-Extract
 
 0.0.1   TBD 
         First version, released on an unsuspecting world.
