--- a/File-Find-Object-Rule/Changes
+++ b/File-Find-Object-Rule/Changes
@@ -1,6 +1,7 @@
-ChangeLog for File-Find-Object-Rule:
-------------------------------------
+Changes Log for File-Find-Object-Rule:
+--------------------------------------
 
+0.0303      Mon 27 May 17:52:15 IDT 2013
     - Remove trailing space.
 
 0.0302      Tue 25 Dec 22:35:01 IST 2012
