--- a/File-Find-Object-Rule-MMagic/Changes
+++ b/File-Find-Object-Rule-MMagic/Changes
@@ -1,12 +1,12 @@
-0.0.3
+0.0.3   2014-01-30
     - Minimal version of perl.
-    - Add t/style-trailing-space.t , t/pod.t , t/pod-coverage.t and
+    - Add t/style-trailing-space.t , t/pod.t , t/pod-coverage.t , and
     t/cpan-changes.t .
     - Add the "LICENSE" file.
 
-0.0.2   Fri Mar 26 15:50:34 IDT 2010
+0.0.2   2010-03-26
     - Fixed t/File-Find-Object-Rule-MMagic.t on MSWin32 (used File::Spec).
 
-0.0.1   Mon Jul  6 12:29:12 IDT 2009
+0.0.1   2009-07-06
     - Derived from File-Find-Rule-MMagic 0.02.
 
