--- a/File-Find-Object-Rule-MMagic/Changes
+++ b/File-Find-Object-Rule-MMagic/Changes
@@ -1,3 +1,7 @@
+0.0.4   2014-02-02
+    - Minimal version of perl in Build.PL and META.yml (CPANTS).
+        - Was 0 previously.
+
 0.0.3   2014-01-30
     - Minimal version of perl.
     - Add t/style-trailing-space.t , t/pod.t , t/pod-coverage.t , and
