--- a/File-Find-Object-Rule/Changes
+++ b/File-Find-Object-Rule/Changes
@@ -1,6 +1,11 @@
 Changes Log for File-Find-Object-Rule:
 --------------------------------------
 
+0.0308  2018-06-19
+    - Apply spelling fixes patch from Debian
+        - https://rt.cpan.org/Public/Bug/Display.html?id=125635
+        - Thanks!
+
 0.0307  2018-05-23
     - Convert to Dist-Zilla .
 
