--- a/File-Find-Object-Rule/Changes
+++ b/File-Find-Object-Rule/Changes
@@ -1,6 +1,10 @@
 Changes Log for File-Find-Object-Rule:
 --------------------------------------
 
+0.0308  2018-06-20
+    - Remove stray *.orig files from the CPAN dist.
+        - Thanks to gregor .
+
 0.0308  2018-06-19
     - Apply spelling fixes patch from Debian
         - https://rt.cpan.org/Public/Bug/Display.html?id=125635
